@@ -1,5 +1,16 @@
 2009-08-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* openvasd/Makefile: Added missing dependency for modules "users",
+	"ntp_11" and "openvasd".
+
+	* openvasd/users.c (users_add_rule): Adjust to new rules data,
+	for the time being assuming only IPv4.
+
+	* openvasd/ntp_11.c (ntp_11_rules): Adjust to new rules data,
+	for the time being assuming only IPv4.
+
+2009-08-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	Initializing implementation for IPv6 support.
 	This corresponds to Change Request #27,
 	http://www.openvas.org/openvas-cr-27.html
